Ingress/Ingress.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-k8s-deployment
spec:
  selector:
    matchLabels:
      app: payment-k8s
  replicas: 1
  template:
    metadata:
      labels:
        app: payment-k8s
    spec:
      containers:
        - name: payment
          image: gadebhavani26/payment:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: payment-k8ssvc
spec:
  selector:
    app: payment-k8s
  ports:
    - protocol: TCP
      port: 80
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-k8s-deployment
spec:
  selector:
    matchLabels:
      app: service-k8s
  replicas: 1
  template:
    metadata:
      labels:
        app: service-k8s
    spec:
      containers:
        - name: service
          image: gadebhavani26/service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: service-k8ssvc
spec:
  selector:
    app: service-k8s
  ports:
    - protocol: TCP
      port: 80
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: service-k8ssvc
                port:
                  number: 80
          - path: /payments(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: payment-k8ssvc
                port:
                  number: 80

---
null
